Bug 570267 - [OOPP] Firefox 3.6.4 bug: When a flash file has a focus, window.onblur event does not happen as expected. r=jimm