dom/plugins/PluginInstanceChild.cpp
@@ -1070,7 +1070,7 @@ PluginInstanceChild::PluginWindowProc(HWND hWnd,
 
     // The plugin received keyboard focus, let the parent know so the dom is up to date.
     if (message == WM_MOUSEACTIVATE)
-        self->CallPluginGotFocus();
+      self->CallPluginFocusChange(PR_TRUE);
 
     // Prevent lockups due to plugins making rpc calls when the parent
     // is making a synchronous SendMessage call to the child window. Add
@@ -1086,6 +1086,9 @@ PluginInstanceChild::PluginWindowProc(HWND hWnd,
             break;
         }
     }
+
+    if (message == WM_KILLFOCUS)
+      self->CallPluginFocusChange(PR_FALSE);
 
     if (message == WM_USER+1 &&
         (self->mQuirks & PluginInstanceChild::QUIRK_FLASH_THROTTLE_WMUSER_EVENTS)) {
